--- a/src/components/Questions/Question.css
+++ b/src/components/Questions/Question.css
@@ -1,16 +1,18 @@
 .question{
     /* justify-content: center; */
     align-items: center;
-    width: 50%;
-    margin-left: 400px;
+    width: 80%;
+    margin-left: 30px;
+    margin-right: 20px;
     margin-bottom: 50px;
+    margin-top: 20px;
 }
 
 .question1{
  border: 2px solid black;
     border-radius: 5px;
     margin-bottom: 20px;
-    margin-left: 25px;
+    /* margin-left: 25px; */
     background-color:lightcoral
 }
 .question2{
@@ -18,6 +20,11 @@
     border: 2px solid black;
     border-radius: 5px;
     margin-bottom: 10px;
-     margin-left: 20px;
+     /* margin-left: 20px; */
     /* margin-right: 10px; */ 
 }
+/* @media screen and (max-width:420px) {
+    .question{
+        grid-template-columns: repeat(2, 1fr);
+    }
+} */
